tests/paczka2/big_fuzzy/29287259.err
Error in line 13: ka5YbfFiNE A491 84,5
Error in line 12: zqy A347 79,8
Error in line 14: XqD A469 4,0
Error in line 9: 2S4i3m A491 57,7
Error in line 28: zqy A469 46,7
Error in line 37: UJK6BHTVSz A469 -4,4
Error in line 35: ka5YbfFiNE A491 32,0
Error in line 33: 2S4i3m A491 3,5
Error in line 45: KD6SP A491 32,2
Error in line 36: UJK6BHTVSz A469 59,7
Error in line 41: ka5YbfFiNE A607 64,7
Error in line 48: KD6SP A469 87,4
Error in line 66: KDVSP A4V9 74,8
Error in line 70:  JK6BHTVSz A347 74,2
Error in line 64: XqD A347 7,7
Error in line 87: UJK6BHTVSz A491 17,2
Error in line 85: ka5YbfFiNE A491 13,8
Error in line 109: UJK6BHTVSz A347 19,2
Error in line 115: UJK6BHTVSz A491 96,2
Error in line 136: 2S4i3m A607 89,92
Error in line 131: 2S4i3m A347 68,2
Error in line 145: A469 A469 88,6
Error in line 148: A469 A491 44,9
Error in line 151: ka5YbfFiNE A491 30,5
Error in line 165: zqy A491 97,3
Error in line 155: KD6SP A469 4,9
Error in line 174: UJ]6BHTVSz A607 52,0
Error in line 173: zqy A607 91,2
Error in line 149: 2S4i3m A491 100,7
Error in line 187: XqD A469 97,2
Error in line 191: XqD A607 58,5
Error in line 192: XqD A469 80,6
Error in line 190: 2S4i3m A607 98,9
Error in line 199: ka5YbfFiNE A347 46,4
Error in line 205: 2S4i3m A491 19,00
Error in line 207: UJK6BHTVSz A607 87,1
Error in line 197: 2S4i3m A469 50,6
Error in line 210: UJK6BHTVSz A491 76,4
Error in line 216: A469 A491 63,5
Error in line 228: KD6SP A491 15,3
Error in line 224: UJK6BHTVSz A491 73,9
Error in line 238: XqD A607 40,0
Error in line 250: ka5YbfFiNE A491 -1,3
